--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,12 @@
 
 # minimal Rails specific artifacts
 db/*.sqlite3
+/db/*.sqlite3-journal
 /log/*
 /tmp/*
+
+# configuration file introduced in Rails 4.1
+/config/secrets.yml
 
 # various artifacts
 **.war
