update to Rails 4.0.3 (fixes issue #26

--- a/.gitignore
+++ b/.gitignore
@@ -78,5 +78,9 @@ pickle-email-*.html
 # vim artifacts
 **.swp
 
+# Environment files that may contain sensitive data
+.env
+.powenv
+
 # Ignore application configuration
 /config/application.yml
