--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-rails",
+  "name": "RailsApps learn-rails",
   "description": "Tutorial application from the book 'Learn Ruby on Rails' by Daniel Kehoe",
   "keywords": [
     "Ruby 2",
