revert config/database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,8 +20,6 @@ test:
   <<: *default
   database: db/test.sqlite3
 
-
 production:
   <<: *default
-  adapter: postgresql
-  encoding: unicode
+  database: db/production.sqlite3
