--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -12,7 +12,7 @@
 
 development:
   email_provider_username: <%= ENV["MANDRILL_USERNAME"] %>
-  email_provider_apikey: <%= ENV["MANDRILL_API_KEY"] %>
+  email_provider_api_key: <%= ENV["MANDRILL_API_KEY"] %>
   domain_name: example.com
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
@@ -26,7 +26,7 @@ test:
 # instead read values from the environment.
 production:
   email_provider_username: <%= ENV["MANDRILL_USERNAME"] %>
-  email_provider_apikey: <%= ENV["MANDRILL_API_KEY"] %>
+  email_provider_api_key: <%= ENV["MANDRILL_API_KEY"] %>
   domain_name: <%= ENV["DOMAIN_NAME"] %>
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
