--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -10,6 +10,13 @@
 # Make sure the secrets in this file are kept private
 # if you're sharing your code publicly.
 
+# Shared secrets are available across all environments.
+
+# shared:
+#   api_key: a1B2c3D4e5F6
+
+# Environmental secrets are only available for that specific environment.
+
 development:
   email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
   email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %>
@@ -22,8 +29,11 @@ development:
 test:
   secret_key_base: very_long_random_string
 
-# Do not keep production secrets in the repository,
-# instead read values from the environment.
+# Do not keep production secrets in the unencrypted secrets file.
+# Instead, either read values from the environment.
+# Or, use `bin/rails secrets:setup` to configure encrypted secrets
+# and move the `production:` environment over there.
+
 production:
   email_provider_username: <%= ENV["SENDGRID_USERNAME"] %>
   email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %> 
